[project]
name = "eliot"
description = "The Mozilla Symbolication Service"
readme = "README.rst"
version = "1.0.0"  # Required, but unused
requires-python = "==3.11.*"
dependencies = [
    "backoff==2.2.1",
    "boltons==25.0.0",
    "click==8.3.1",
    "datadog==0.52.1",
    "dockerflow==2026.1.26",
    "everett==3.5.0",
    "falcon==4.2.0",
    "fillmore==2.2.0",
    "gunicorn==24.1.1",
    "honcho==2.0.0",
    "inotify-simple==2.0.1",
    "jsonschema==4.26.0",
    "markus[datadog]==5.2.0",
    "msgpack==1.1.2",
    "obs-common==2026.1.21",
    "pytest==9.0.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-mock==1.12.1",
    "ruff==0.14.14",
    "sentry-sdk==2.22.0",
    "sphinx==9.0.4",
    "sphinx-rtd-theme==3.1.0",
    "sphinxcontrib-httpdomain==1.8.1",
    "symbolic==12.17.1",
    "urllib3==2.6.3",
    "werkzeug==3.1.5",
]

[dependency-groups]
devcontainer = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/mozilla-services/eliot"

[tool.uv]
environments = ["""
    sys_platform == 'linux' and
    platform_machine == 'x86_64' and
    implementation_name == 'cpython'
"""]
package = false

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"

[tool.uv.sources]
obs-common = { index = "cavendish" }

[tool.ruff]
line-length = 88

target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and Bugbear (`B`) rules
select = ["E", "F", "B"]

# Ignore line length violations
ignore = ["E501"]

unfixable = ["B"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.pytest.ini_options]
norecursedirs = [".cache", "__pycache__"]
testpaths = "tests/"
addopts = "-rsxX --showlocals --tb=native -p no:cacheprovider"

# Transform all warnings into errors
filterwarnings = [
    "error",
    # Falcon currently uses cgi which is going away in python 3.13
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    # sentry-sdk has a Falcon integration that needs some help and is currently
    # using a thing in Falcon that kicks up a DeprecatedWarning
    "ignore:The api_helpers module.*:falcon.util.deprecation.DeprecatedWarning",
]


[tool.paul-mclendahand]
github_user = "mozilla-services"
github_project = "eliot"
main_branch = "main"


[tool.release]
github_user = "mozilla-services"
github_project = "eliot"
bugzilla_product = "Eliot"
bugzilla_component = "General"
main_branch = "main"
tag_name_template = "v%Y.%m.%d"


[tool.service-status]
main_branch = "main"
hosts = [
    "stage=https://eliot-stage.symbols.nonprod.webservices.mozgcp.net",
    "prod=https://symbolication.services.mozilla.com",
]
