[project]
name = "eliot"
description = "The Mozilla Symbolication Service"
readme = "README.rst"
version = "1.0.0"  # Required, but unused
requires-python = "==3.11.*"
dependencies = [
    "backoff",
    "boltons",
    "click",
    "datadog",
    "dockerflow",
    "everett",
    "falcon",
    "fillmore",
    "gunicorn",
    "honcho",
    "inotify-simple",
    "jsonschema",
    "markus[datadog]",
    "msgpack",
    "obs-common",
    "pytest",
    "pyyaml",
    "requests",
    "requests-mock",
    "ruff",
    "sentry-sdk",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-httpdomain",
    "symbolic",
    "urllib3",
    "werkzeug",
]

[dependency-groups]
devcontainer = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/mozilla-services/eliot"

[tool.uv]
environments = ["""
    sys_platform == 'linux' and
    platform_machine == 'x86_64' and
    implementation_name == 'cpython'
"""]
package = false

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"

[tool.uv.sources]
obs-common = { index = "cavendish" }

[tool.ruff]
line-length = 88

target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and Bugbear (`B`) rules
select = ["E", "F", "B"]

# Ignore line length violations
ignore = ["E501"]

unfixable = ["B"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.pytest.ini_options]
norecursedirs = [".cache", "__pycache__"]
testpaths = "tests/"
addopts = "-rsxX --showlocals --tb=native -p no:cacheprovider"

# Transform all warnings into errors
filterwarnings = [
    "error",
    # Falcon currently uses cgi which is going away in python 3.13
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    # sentry-sdk has a Falcon integration that needs some help and is currently
    # using a thing in Falcon that kicks up a DeprecatedWarning
    "ignore:The api_helpers module.*:falcon.util.deprecation.DeprecatedWarning",
]


[tool.paul-mclendahand]
github_user = "mozilla-services"
github_project = "eliot"
main_branch = "main"


[tool.release]
github_user = "mozilla-services"
github_project = "eliot"
bugzilla_product = "Eliot"
bugzilla_component = "General"
main_branch = "main"
tag_name_template = "v%Y.%m.%d"


[tool.service-status]
main_branch = "main"
hosts = [
    "stage=https://eliot-stage.symbols.nonprod.webservices.mozgcp.net",
    "prod=https://symbolication.services.mozilla.com",
]
